--- a/validitech/p/profil.html
+++ b/validitech/p/profil.html
@@ -30,7 +30,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid ms-5 me-5">
-            <span onclick="location.replace('../index.html')" class="navbar-brand fw-bold">Validitech</span>
+            <span onclick="location.replace('../index.html')" class="navbar-brand fw-bold">Valisics</span>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -120,7 +120,7 @@
 
 <br />
 <footer class="bg-body-tertiary p-3 text-center">
-    Validitech © 2024
+    Valisics © 2024
 </footer>
 
 </html>
@@ -163,7 +163,7 @@
                 if (doc.data().role === "kreator") {
                     const kreatorNav = `
                     <span type="button" class="link-light ms-5" onclick="location.replace('./tabelValidator.html')">List Validator</span>
-                    <span type="button" class="link-light ms-5" onclick="location.replace('./submit.html')">Submit Media</span>
+                    <span type="button" class="link-light ms-5" onclick="location.replace('./submit.html')">Submit Produk</span>
                     `
                     navbar.innerHTML = kreatorNav + logoutNav
 
@@ -173,7 +173,7 @@
                     const postRef = firebase.firestore().collection("posts").doc(user.uid)
                     postRef.get().then((doc) => {
 
-                            konten.innerText = "List Media"
+                            konten.innerText = "List Produk"
                             const posts = doc.data().post
 
                             thead.innerHTML = `
@@ -214,6 +214,10 @@
                 }
             })
         }
+    else {
+        alert("Kamu belum login!")
+        location.replace("../index.html")
+    }
     })
 
     function editProfil() {
@@ -256,7 +260,7 @@
         firebase.auth().signOut()
             .then(() => {
                 alert("Logout berhasil!")
-                location.replace("./login.html")
+                location.replace("../index.html")
             })
             .catch((error) => {
                 alert(error.message)
