--- a/source/plugins/navbar.html
+++ b/source/plugins/navbar.html
@@ -8,12 +8,12 @@
     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
+  <button onclick="setTheme()" class="theme">
+    <span id="setTheme" class="mdi mdi-weather-night"></span>
+  </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav" id="navbarList">
     </ul>
-    <button onclick="setTheme()" class="theme">
-      <span id="setTheme" class="mdi mdi-weather-night"></span>
-    </button>
   </div>
 </nav>
 
@@ -52,6 +52,63 @@
   }).catch((error) => {
     console.error(error)
   })
+</script>
+<script>
+  // THEME
+let html = document.getElementsByTagName("html")[0].dataset.bsTheme
+
+let SetTheme = document.getElementById("setTheme").classList
+let Logo = document.getElementById("logo").classList
+let Footer = document.getElementById("footer").classList
+
+function lightTheme() {
+    SetTheme.replace("mdi-weather-night", "mdi-weather-sunny")
+    SetTheme.classList.replace("light", "dark")
+    Logo.replace("light", "dark")
+    Footer.replace("light", "dark")
+}
+function darkTheme() {
+    SetTheme.replace("mdi-weather-sunny", "mdi-weather-night")
+    SetTheme.classList.replace("dark", "light")
+    Logo.replace("dark", "light")
+    Footer.classList.replace("dark", "light")
+}
+function setTheme() {
+    let data = document.getElementsByTagName("html")[0].dataset.bsTheme
+    if (data == "dark") {
+        document.getElementsByTagName("html")[0].dataset.bsTheme = "undefined"
+        lightTheme()
+        localStorage.setItem("theme", "undefined")
+        if (document.getElementById("hibi")) {
+            document.getElementById("hibi").classList.replace("light", "dark")
+        }
+    } else {
+        document.getElementsByTagName("html")[0].dataset.bsTheme = "dark"
+        darkTheme()
+        localStorage.setItem("theme", "dark")
+        if (document.getElementById("hibi")) {
+            document.getElementById("hibi").classList.replace("dark", "light")
+        }
+    }
+}
+addEventListener("load", () => {
+var getTheme = localStorage.getItem("theme")
+if (getTheme == "dark") {
+    darkTheme()
+    document.getElementsByTagName("html")[0].dataset.bsTheme = "dark"
+    if (document.getElementById("hibi")) {
+        document.getElementById("hibi").classList.replace("dark", "light")
+    }
+} else if (getTheme == "undefined") {
+    lightTheme()
+    document.getElementsByTagName("html")[0].dataset.bsTheme = "undefined"
+    if (document.getElementById("hibi")) {
+        document.getElementById("hibi").classList.replace("light", "dark")
+    }
+} else {
+    localStorage.removeItem("theme")
+}
+})
 </script>
 
 <style>
