--- a/jkt48-pm/p/subs.html
+++ b/jkt48-pm/p/subs.html
@@ -31,6 +31,11 @@
 </head>
 
 <body style="background-image: url(https://jkt48.primesse.me/images/top_background.png);">
+    <div class="alert alert-warning text-center" role="alert">
+        <span class="fw-bold" style="font-size: smaller;">
+            PERHATIAN! Mohon samakan email kamu di website ini dengan email pada pembayaran!
+        </span>
+    </div>
     <div class="payment">
         <a style="height: -webkit-fill-available !important" class="mayar-product-embed" href="https://habilihsanproject.mayar.link/pl/jkt48-private-message?iframe=true" data-hide-merchant-logo="true" data-hide-product-images="true" ><div class="spinner-border" role="status"></div></a>
         <script type="text/javascript" src="https://pub-fa933e278fb7467aa20592e0a61f5082.r2.dev/mayar-embed.js"></script>
