--- a/jkt48-pm/p/login.html
+++ b/jkt48-pm/p/login.html
@@ -39,7 +39,7 @@
 
         <p class="modal-title">LOG IN</p><br/>
 
-        <div class="alert alert-primary text-center ms-5 me-5" role="alert">
+        <div class="alert alert-primary text-center" role="alert">
             <span class="fw-bold" style="font-size: smaller;">
                 Ini adalah layanan JKT48PMMMWWW dimana kamu bisa mengakses messages, pictures, dan voice notes dari member JKT48 secara berlangganan.
                 Layanan ini tidak menyediakan notifikasi pesan masuk ataupun ucapan ulang tahun. <br/><button type="button" class="mt-2 w-100 btn btn-outline-primary btn-sm" data-bs-toggle="modal"
