--- a/jkt48-pm/p/subs.html
+++ b/jkt48-pm/p/subs.html
@@ -31,7 +31,7 @@
 </head>
 
 <body style="background-image: url(https://jkt48.primesse.me/images/top_background.png);">
-    <div class="alert alert-warning text-center" role="alert">
+    <div class="alert alert-warning text-center ms-5 me-5" role="alert">
         <span class="fw-bold" style="font-size: smaller;">
             PERHATIAN! Mohon samakan email kamu di website ini dengan email pada pembayaran!
         </span>
